# saccard

./: .gitignore  README.md  benchmark_pipeline.py  install.sh  notes.md  pyVHR_env.yml  pyproject.toml  requirements-faceparsing.txt  requirements-gpu.txt  requirements-mtts-can.txt  requirements.txt  setup.py  unit_test.py
old/: install.sh  setup.py
pyVHR/: __init__.py
pyVHR/BPM/: BPM.py  __init__.py  utils.py
pyVHR/BVP/: BVP.py  __init__.py  methods.py
pyVHR/deepRPPG/: mtts_can.py
pyVHR/deepRPPG/MTTS_CAN/: model.py
pyVHR/extraction/: __init__.py  sig_extraction_methods.py  sig_processing.py  skin_extraction_methods.py
pyVHR/plot/: visualize.py
pyVHR/resources/faceparsing/: train.py
pyVHR/resources/faceparsing/modules/: bn.py
pyVHR/utils/: __init__.py  cuda_utils.py
saccard/: __init__.py  circular_stats_report.py  core.py  saccardiac.py
scripts/: setup_gpu_env.ps1
